--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,49 @@
+body{
+    background-color:
+    font-family:
+    podding:
+    maring:
+}
+    
 
+header {
+  background-color: 
+  color:aliceblue
+  padding: 
+  text-aling:aqua
+}
+
+h1 {
+  font-size: 
+  margin: 
+}
+
+main {
+  maring:
+  max-width:
+}
+  
+p{
+    font-size:
+    color: 
+    line-height: 
+    maring-bottom: 
+}
+
+img{ 
+section {
+  display: 
+  maring: 
+  max-width: 
+  border: 
+  border-radius: 
+  {
+    
+footer {
+
+  background-color:
+  color:
+  text-aling: 
+  padding: 
+  maring-top; 
+  font-size:
